--- a/dataanal.ipynb
+++ b/dataanal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -86,27 +86,207 @@
        "      <td>Жетиген Бакыт у.</td>\n",
        "      <td>C11</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>28/11</td>\n",
+       "      <td>970</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>Дополнительный курс по математике</td>\n",
+       "      <td>SEST-2-22</td>\n",
+       "      <td>Жетиген Бакыт у.</td>\n",
+       "      <td>C11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>28/11</td>\n",
+       "      <td>970</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>Дополнительный курс по математике</td>\n",
+       "      <td>SEST-3-22</td>\n",
+       "      <td>Жетиген Бакыт у.</td>\n",
+       "      <td>C11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>28/11</td>\n",
+       "      <td>970</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>Дополнительный курс по математике</td>\n",
+       "      <td>DHT-1-22</td>\n",
+       "      <td>Жетиген Бакыт у.</td>\n",
+       "      <td>C11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>28/11</td>\n",
+       "      <td>970</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>Дополнительный курс по математике</td>\n",
+       "      <td>EHI-1-22</td>\n",
+       "      <td>Жетиген Бакыт у.</td>\n",
+       "      <td>C11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>28/11</td>\n",
+       "      <td>970</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>Дополнительный курс по математике</td>\n",
+       "      <td>MIX-1-22</td>\n",
+       "      <td>Жетиген Бакыт у.</td>\n",
+       "      <td>C11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>28/11</td>\n",
+       "      <td>970</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>Дополнительный курс по математике</td>\n",
+       "      <td>MIX-2-22</td>\n",
+       "      <td>Жетиген Бакыт у.</td>\n",
+       "      <td>C11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>28/11</td>\n",
+       "      <td>970</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>Дополнительный курс по математике</td>\n",
+       "      <td>MIX-3-22</td>\n",
+       "      <td>Жетиген Бакыт у.</td>\n",
+       "      <td>C11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>28/11</td>\n",
+       "      <td>970</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>Дополнительный курс по математике</td>\n",
+       "      <td>ETSI-1-22</td>\n",
+       "      <td>Жетиген Бакыт у.</td>\n",
+       "      <td>C11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>29/11</td>\n",
+       "      <td>700</td>\n",
+       "      <td>780</td>\n",
+       "      <td>Информатика</td>\n",
+       "      <td>MIX-2-22</td>\n",
+       "      <td>Апел Сарыбаева</td>\n",
+       "      <td>LAB3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>29/11</td>\n",
+       "      <td>790</td>\n",
+       "      <td>870</td>\n",
+       "      <td>Математика</td>\n",
+       "      <td>MIX-2-22</td>\n",
+       "      <td>Ольга Беляева</td>\n",
+       "      <td>C9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>29/11</td>\n",
+       "      <td>880</td>\n",
+       "      <td>960</td>\n",
+       "      <td>Русская литература</td>\n",
+       "      <td>MIX-2-22</td>\n",
+       "      <td>Елена Воронина</td>\n",
+       "      <td>C4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>29/11</td>\n",
+       "      <td>1060</td>\n",
+       "      <td>1140</td>\n",
+       "      <td>English Talking Club по желанию</td>\n",
+       "      <td>SEST-1-22</td>\n",
+       "      <td>Michael Sartini</td>\n",
+       "      <td>CH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>29/11</td>\n",
+       "      <td>1060</td>\n",
+       "      <td>1140</td>\n",
+       "      <td>English Talking Club по желанию</td>\n",
+       "      <td>SEST-2-22</td>\n",
+       "      <td>Michael Sartini</td>\n",
+       "      <td>CH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>29/11</td>\n",
+       "      <td>1060</td>\n",
+       "      <td>1140</td>\n",
+       "      <td>English Talking Club по желанию</td>\n",
+       "      <td>SEST-3-22</td>\n",
+       "      <td>Michael Sartini</td>\n",
+       "      <td>CH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>29/11</td>\n",
+       "      <td>1060</td>\n",
+       "      <td>1140</td>\n",
+       "      <td>English Talking Club по желанию</td>\n",
+       "      <td>DHT-1-22</td>\n",
+       "      <td>Michael Sartini</td>\n",
+       "      <td>CH</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    date  start   end                                     subject      class  \\\n",
-       "0  28/11    570   650                                 Информатика   MIX-2-22   \n",
-       "1  28/11    700   780                                  Математика   MIX-2-22   \n",
-       "2  28/11    790   870  Основы креативного и критического мышления   MIX-2-22   \n",
-       "3  28/11    880   960                                      Физика   MIX-2-22   \n",
-       "4  28/11    970  1050           Дополнительный курс по математике  SEST-1-22   \n",
+       "     date  start   end                                     subject  \\\n",
+       "0   28/11    570   650                                 Информатика   \n",
+       "1   28/11    700   780                                  Математика   \n",
+       "2   28/11    790   870  Основы креативного и критического мышления   \n",
+       "3   28/11    880   960                                      Физика   \n",
+       "4   28/11    970  1050           Дополнительный курс по математике   \n",
+       "5   28/11    970  1050           Дополнительный курс по математике   \n",
+       "6   28/11    970  1050           Дополнительный курс по математике   \n",
+       "7   28/11    970  1050           Дополнительный курс по математике   \n",
+       "8   28/11    970  1050           Дополнительный курс по математике   \n",
+       "9   28/11    970  1050           Дополнительный курс по математике   \n",
+       "10  28/11    970  1050           Дополнительный курс по математике   \n",
+       "11  28/11    970  1050           Дополнительный курс по математике   \n",
+       "12  28/11    970  1050           Дополнительный курс по математике   \n",
+       "13  29/11    700   780                                 Информатика   \n",
+       "14  29/11    790   870                                  Математика   \n",
+       "15  29/11    880   960                          Русская литература   \n",
+       "16  29/11   1060  1140             English Talking Club по желанию   \n",
+       "17  29/11   1060  1140             English Talking Club по желанию   \n",
+       "18  29/11   1060  1140             English Talking Club по желанию   \n",
+       "19  29/11   1060  1140             English Talking Club по желанию   \n",
        "\n",
-       "              teacher classroom  \n",
-       "0      Апел Сарыбаева      LAB3  \n",
-       "1       Ольга Беляева        C9  \n",
-       "2  Анастасия Шабалина        C9  \n",
-       "3   Аманбек Чечейбаев        C9  \n",
-       "4    Жетиген Бакыт у.       C11  "
+       "         class             teacher classroom  \n",
+       "0     MIX-2-22      Апел Сарыбаева      LAB3  \n",
+       "1     MIX-2-22       Ольга Беляева        C9  \n",
+       "2     MIX-2-22  Анастасия Шабалина        C9  \n",
+       "3     MIX-2-22   Аманбек Чечейбаев        C9  \n",
+       "4    SEST-1-22    Жетиген Бакыт у.       C11  \n",
+       "5    SEST-2-22    Жетиген Бакыт у.       C11  \n",
+       "6    SEST-3-22    Жетиген Бакыт у.       C11  \n",
+       "7     DHT-1-22    Жетиген Бакыт у.       C11  \n",
+       "8     EHI-1-22    Жетиген Бакыт у.       C11  \n",
+       "9     MIX-1-22    Жетиген Бакыт у.       C11  \n",
+       "10    MIX-2-22    Жетиген Бакыт у.       C11  \n",
+       "11    MIX-3-22    Жетиген Бакыт у.       C11  \n",
+       "12   ETSI-1-22    Жетиген Бакыт у.       C11  \n",
+       "13    MIX-2-22      Апел Сарыбаева      LAB3  \n",
+       "14    MIX-2-22       Ольга Беляева        C9  \n",
+       "15    MIX-2-22      Елена Воронина        C4  \n",
+       "16   SEST-1-22     Michael Sartini        CH  \n",
+       "17   SEST-2-22     Michael Sartini        CH  \n",
+       "18   SEST-3-22     Michael Sartini        CH  \n",
+       "19    DHT-1-22     Michael Sartini        CH  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,12 +296,12 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "df = pd.read_json(\"lessons_pd.json\")\n",
-    "df.head(5)"
+    "df.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +311,7 @@
     "def time(hours, minutes):\n",
     "    return hours*60+minutes\n",
     "def to_time(entry):\n",
-    "    return entry[\"start\"] =\n",
+    "    return entry[\"start\"]\n",
     "def then(df, date, time):\n",
     "    return df[(df[\"date\"] == date) & (df[\"start\"]<=time) & (df[\"end\"]>=time)]\n",
     "def now(df):\n",
@@ -146,23 +326,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LAB3 C4 LAB2 C10 C11 C7 C9 MR C6 C8 CH C3 LAB1 C2 C1 C5\n"
+     ]
+    }
+   ],
+   "source": [
+    "cabs - set(now(df)[\"classroom\"])\n",
+    "\n",
+    "def free_auditories():\n",
+    "    auditories = []\n",
+    "    for i in cabs:\n",
+    "        auditories.append(i)\n",
+    "    print(*auditories)\n",
+    "    return auditories\n",
+    "\n",
+    "auditories = free_auditories()\n",
+    "\n",
+    "with open(\"file.txt\",'w',encoding=\"utf-8\") as f:\n",
+    "    for i in cabs:\n",
+    "        f.write(i+\" \")\n",
+    "    f.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'C8', 'CH'}"
+       "[]"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cabs - set(now(df)[\"classroom\"])"
+    "auditories"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -186,7 +404,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0cb1f4c61e00a4630e095d7db81d372b37b525937944a6ef204cd75fca061c20"
+    "hash": "5375c6fca34c5f00efc2a1fb12328b4af153b74c7751f4a701371fb63dcb16d8"
    }
   }
  },
