--- a/dataanal.ipynb
+++ b/dataanal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -38,255 +38,150 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>570</td>\n",
-       "      <td>650</td>\n",
-       "      <td>Информатика</td>\n",
-       "      <td>MIX-2-22</td>\n",
-       "      <td>Апел Сарыбаева</td>\n",
-       "      <td>LAB3</td>\n",
+       "      <td>05/12</td>\n",
+       "      <td>790</td>\n",
+       "      <td>870</td>\n",
+       "      <td>Линейная алгебра и аналитическая геометрия</td>\n",
+       "      <td>DHT-1-20</td>\n",
+       "      <td>Елена Бурова</td>\n",
+       "      <td>LAB1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>700</td>\n",
-       "      <td>780</td>\n",
-       "      <td>Математика</td>\n",
-       "      <td>MIX-2-22</td>\n",
-       "      <td>Ольга Беляева</td>\n",
-       "      <td>C9</td>\n",
+       "      <td>05/12</td>\n",
+       "      <td>790</td>\n",
+       "      <td>870</td>\n",
+       "      <td>Линейная алгебра и аналитическая геометрия</td>\n",
+       "      <td>DHT-2-20</td>\n",
+       "      <td>Елена Бурова</td>\n",
+       "      <td>LAB1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>28/11</td>\n",
+       "      <td>05/12</td>\n",
        "      <td>790</td>\n",
        "      <td>870</td>\n",
-       "      <td>Основы креативного и критического мышления</td>\n",
-       "      <td>MIX-2-22</td>\n",
-       "      <td>Анастасия Шабалина</td>\n",
-       "      <td>C9</td>\n",
+       "      <td>Линейная алгебра и аналитическая геометрия</td>\n",
+       "      <td>EHI-1-20</td>\n",
+       "      <td>Елена Бурова</td>\n",
+       "      <td>LAB1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>880</td>\n",
-       "      <td>960</td>\n",
-       "      <td>Физика</td>\n",
-       "      <td>MIX-2-22</td>\n",
-       "      <td>Аманбек Чечейбаев</td>\n",
-       "      <td>C9</td>\n",
+       "      <td>05/12</td>\n",
+       "      <td>790</td>\n",
+       "      <td>870</td>\n",
+       "      <td>Линейная алгебра и аналитическая геометрия</td>\n",
+       "      <td>SEST-1-20</td>\n",
+       "      <td>Елена Бурова</td>\n",
+       "      <td>LAB1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>970</td>\n",
-       "      <td>1050</td>\n",
-       "      <td>Дополнительный курс по математике</td>\n",
-       "      <td>SEST-1-22</td>\n",
-       "      <td>Жетиген Бакыт у.</td>\n",
-       "      <td>C11</td>\n",
+       "      <td>05/12</td>\n",
+       "      <td>790</td>\n",
+       "      <td>870</td>\n",
+       "      <td>Линейная алгебра и аналитическая геометрия</td>\n",
+       "      <td>SFHT-1-20</td>\n",
+       "      <td>Елена Бурова</td>\n",
+       "      <td>LAB1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>970</td>\n",
-       "      <td>1050</td>\n",
-       "      <td>Дополнительный курс по математике</td>\n",
-       "      <td>SEST-2-22</td>\n",
-       "      <td>Жетиген Бакыт у.</td>\n",
-       "      <td>C11</td>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>970</td>\n",
-       "      <td>1050</td>\n",
-       "      <td>Дополнительный курс по математике</td>\n",
-       "      <td>SEST-3-22</td>\n",
-       "      <td>Жетиген Бакыт у.</td>\n",
-       "      <td>C11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>970</td>\n",
-       "      <td>1050</td>\n",
-       "      <td>Дополнительный курс по математике</td>\n",
-       "      <td>DHT-1-22</td>\n",
-       "      <td>Жетиген Бакыт у.</td>\n",
-       "      <td>C11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>970</td>\n",
-       "      <td>1050</td>\n",
-       "      <td>Дополнительный курс по математике</td>\n",
-       "      <td>EHI-1-22</td>\n",
-       "      <td>Жетиген Бакыт у.</td>\n",
-       "      <td>C11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>970</td>\n",
-       "      <td>1050</td>\n",
-       "      <td>Дополнительный курс по математике</td>\n",
-       "      <td>MIX-1-22</td>\n",
-       "      <td>Жетиген Бакыт у.</td>\n",
-       "      <td>C11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>970</td>\n",
-       "      <td>1050</td>\n",
-       "      <td>Дополнительный курс по математике</td>\n",
-       "      <td>MIX-2-22</td>\n",
-       "      <td>Жетиген Бакыт у.</td>\n",
-       "      <td>C11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>970</td>\n",
-       "      <td>1050</td>\n",
-       "      <td>Дополнительный курс по математике</td>\n",
-       "      <td>MIX-3-22</td>\n",
-       "      <td>Жетиген Бакыт у.</td>\n",
-       "      <td>C11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>28/11</td>\n",
-       "      <td>970</td>\n",
-       "      <td>1050</td>\n",
-       "      <td>Дополнительный курс по математике</td>\n",
-       "      <td>ETSI-1-22</td>\n",
-       "      <td>Жетиген Бакыт у.</td>\n",
-       "      <td>C11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <th>995</th>\n",
        "      <td>29/11</td>\n",
        "      <td>700</td>\n",
        "      <td>780</td>\n",
-       "      <td>Информатика</td>\n",
-       "      <td>MIX-2-22</td>\n",
-       "      <td>Апел Сарыбаева</td>\n",
-       "      <td>LAB3</td>\n",
+       "      <td>Иностранный язык</td>\n",
+       "      <td>MIX-1-22</td>\n",
+       "      <td>Наталья Цуканова</td>\n",
+       "      <td>C5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14</th>\n",
+       "      <th>996</th>\n",
+       "      <td>29/11</td>\n",
+       "      <td>700</td>\n",
+       "      <td>780</td>\n",
+       "      <td>Иностранный язык</td>\n",
+       "      <td>SEST-3-22</td>\n",
+       "      <td>Гульмира Молдомусаева</td>\n",
+       "      <td>C8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>29/11</td>\n",
+       "      <td>700</td>\n",
+       "      <td>780</td>\n",
+       "      <td>Иностранный язык</td>\n",
+       "      <td>MIX-1-22</td>\n",
+       "      <td>Гульмира Молдомусаева</td>\n",
+       "      <td>C8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
        "      <td>29/11</td>\n",
        "      <td>790</td>\n",
        "      <td>870</td>\n",
-       "      <td>Математика</td>\n",
-       "      <td>MIX-2-22</td>\n",
-       "      <td>Ольга Беляева</td>\n",
-       "      <td>C9</td>\n",
+       "      <td>География</td>\n",
+       "      <td>SEST-3-22</td>\n",
+       "      <td>Чолпон Джусупова</td>\n",
+       "      <td>C5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>15</th>\n",
+       "      <th>999</th>\n",
        "      <td>29/11</td>\n",
        "      <td>880</td>\n",
        "      <td>960</td>\n",
-       "      <td>Русская литература</td>\n",
-       "      <td>MIX-2-22</td>\n",
-       "      <td>Елена Воронина</td>\n",
-       "      <td>C4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>29/11</td>\n",
-       "      <td>1060</td>\n",
-       "      <td>1140</td>\n",
-       "      <td>English Talking Club по желанию</td>\n",
-       "      <td>SEST-1-22</td>\n",
-       "      <td>Michael Sartini</td>\n",
-       "      <td>CH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>29/11</td>\n",
-       "      <td>1060</td>\n",
-       "      <td>1140</td>\n",
-       "      <td>English Talking Club по желанию</td>\n",
-       "      <td>SEST-2-22</td>\n",
-       "      <td>Michael Sartini</td>\n",
-       "      <td>CH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>29/11</td>\n",
-       "      <td>1060</td>\n",
-       "      <td>1140</td>\n",
-       "      <td>English Talking Club по желанию</td>\n",
+       "      <td>Кыргызский язык продвинутый уровень</td>\n",
        "      <td>SEST-3-22</td>\n",
-       "      <td>Michael Sartini</td>\n",
-       "      <td>CH</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>29/11</td>\n",
-       "      <td>1060</td>\n",
-       "      <td>1140</td>\n",
-       "      <td>English Talking Club по желанию</td>\n",
-       "      <td>DHT-1-22</td>\n",
-       "      <td>Michael Sartini</td>\n",
-       "      <td>CH</td>\n",
+       "      <td>Бурул Шамбаева</td>\n",
+       "      <td>C5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>1000 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     date  start   end                                     subject  \\\n",
-       "0   28/11    570   650                                 Информатика   \n",
-       "1   28/11    700   780                                  Математика   \n",
-       "2   28/11    790   870  Основы креативного и критического мышления   \n",
-       "3   28/11    880   960                                      Физика   \n",
-       "4   28/11    970  1050           Дополнительный курс по математике   \n",
-       "5   28/11    970  1050           Дополнительный курс по математике   \n",
-       "6   28/11    970  1050           Дополнительный курс по математике   \n",
-       "7   28/11    970  1050           Дополнительный курс по математике   \n",
-       "8   28/11    970  1050           Дополнительный курс по математике   \n",
-       "9   28/11    970  1050           Дополнительный курс по математике   \n",
-       "10  28/11    970  1050           Дополнительный курс по математике   \n",
-       "11  28/11    970  1050           Дополнительный курс по математике   \n",
-       "12  28/11    970  1050           Дополнительный курс по математике   \n",
-       "13  29/11    700   780                                 Информатика   \n",
-       "14  29/11    790   870                                  Математика   \n",
-       "15  29/11    880   960                          Русская литература   \n",
-       "16  29/11   1060  1140             English Talking Club по желанию   \n",
-       "17  29/11   1060  1140             English Talking Club по желанию   \n",
-       "18  29/11   1060  1140             English Talking Club по желанию   \n",
-       "19  29/11   1060  1140             English Talking Club по желанию   \n",
+       "      date  start  end                                     subject  \\\n",
+       "0    05/12    790  870  Линейная алгебра и аналитическая геометрия   \n",
+       "1    05/12    790  870  Линейная алгебра и аналитическая геометрия   \n",
+       "2    05/12    790  870  Линейная алгебра и аналитическая геометрия   \n",
+       "3    05/12    790  870  Линейная алгебра и аналитическая геометрия   \n",
+       "4    05/12    790  870  Линейная алгебра и аналитическая геометрия   \n",
+       "..     ...    ...  ...                                         ...   \n",
+       "995  29/11    700  780                            Иностранный язык   \n",
+       "996  29/11    700  780                            Иностранный язык   \n",
+       "997  29/11    700  780                            Иностранный язык   \n",
+       "998  29/11    790  870                                   География   \n",
+       "999  29/11    880  960         Кыргызский язык продвинутый уровень   \n",
        "\n",
-       "         class             teacher classroom  \n",
-       "0     MIX-2-22      Апел Сарыбаева      LAB3  \n",
-       "1     MIX-2-22       Ольга Беляева        C9  \n",
-       "2     MIX-2-22  Анастасия Шабалина        C9  \n",
-       "3     MIX-2-22   Аманбек Чечейбаев        C9  \n",
-       "4    SEST-1-22    Жетиген Бакыт у.       C11  \n",
-       "5    SEST-2-22    Жетиген Бакыт у.       C11  \n",
-       "6    SEST-3-22    Жетиген Бакыт у.       C11  \n",
-       "7     DHT-1-22    Жетиген Бакыт у.       C11  \n",
-       "8     EHI-1-22    Жетиген Бакыт у.       C11  \n",
-       "9     MIX-1-22    Жетиген Бакыт у.       C11  \n",
-       "10    MIX-2-22    Жетиген Бакыт у.       C11  \n",
-       "11    MIX-3-22    Жетиген Бакыт у.       C11  \n",
-       "12   ETSI-1-22    Жетиген Бакыт у.       C11  \n",
-       "13    MIX-2-22      Апел Сарыбаева      LAB3  \n",
-       "14    MIX-2-22       Ольга Беляева        C9  \n",
-       "15    MIX-2-22      Елена Воронина        C4  \n",
-       "16   SEST-1-22     Michael Sartini        CH  \n",
-       "17   SEST-2-22     Michael Sartini        CH  \n",
-       "18   SEST-3-22     Michael Sartini        CH  \n",
-       "19    DHT-1-22     Michael Sartini        CH  "
+       "          class                teacher classroom  \n",
+       "0      DHT-1-20           Елена Бурова      LAB1  \n",
+       "1      DHT-2-20           Елена Бурова      LAB1  \n",
+       "2      EHI-1-20           Елена Бурова      LAB1  \n",
+       "3     SEST-1-20           Елена Бурова      LAB1  \n",
+       "4     SFHT-1-20           Елена Бурова      LAB1  \n",
+       "..          ...                    ...       ...  \n",
+       "995    MIX-1-22       Наталья Цуканова        C5  \n",
+       "996   SEST-3-22  Гульмира Молдомусаева        C8  \n",
+       "997    MIX-1-22  Гульмира Молдомусаева        C8  \n",
+       "998   SEST-3-22       Чолпон Джусупова        C5  \n",
+       "999   SEST-3-22         Бурул Шамбаева        C5  \n",
+       "\n",
+       "[1000 rows x 7 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,17 +191,17 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "df = pd.read_json(\"lessons_pd.json\")\n",
-    "df.head(20)"
+    "df.head(1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
-    "all_cabs = set(df[\"classroom\"].unique())\n",
+    "all_cabs = set(df[\"classroom\"].unique())-{None}\n",
     "cabs = {cab for cab in all_cabs if not cab.isdigit() and cab[0] != \"G\"}\n",
     "def time(hours, minutes):\n",
     "    return hours*60+minutes\n",
@@ -326,53 +221,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LAB3 C4 LAB2 C10 C11 C7 C9 MR C6 C8 CH C3 LAB1 C2 C1 C5\n"
-     ]
-    }
-   ],
-   "source": [
-    "cabs - set(now(df)[\"classroom\"])\n",
-    "\n",
-    "def free_auditories():\n",
-    "    auditories = []\n",
-    "    for i in cabs:\n",
-    "        auditories.append(i)\n",
-    "    print(*auditories)\n",
-    "    return auditories\n",
-    "\n",
-    "auditories = free_auditories()\n",
-    "\n",
-    "with open(\"file.txt\",'w',encoding=\"utf-8\") as f:\n",
-    "    for i in cabs:\n",
-    "        f.write(i+\" \")\n",
-    "    f.close()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "{'C1', 'C10', 'C3', 'C4', 'C7', 'C8', 'C9', 'CH', 'LAB2', 'MR'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "auditories"
+    "auditories = cabs - set(now(df)[\"classroom\"])\n",
+    "\n",
+    "# def free_auditories():\n",
+    "#     auditories = []\n",
+    "#     for i in cabs:\n",
+    "#         auditories.append(i)\n",
+    "#     print(*auditories)\n",
+    "#     return auditories\n",
+    "\n",
+    "# auditories = free_auditories()\n",
+    "\n",
+    "with open(\"file.txt\",'w',encoding=\"utf-8\") as f:\n",
+    "    for cab in auditories:\n",
+    "        f.write(cab+\" \")\n",
+    "    f.close()\n",
+    "# set(now(df)[\"classroom\"])\n",
+    "\n",
+    "# df[df[\"date\"]]\n",
+    "auditories\n"
    ]
   },
   {
