two-side update

--- a/dataanal.ipynb
+++ b/dataanal.ipynb
@@ -201,22 +201,75 @@
    "outputs": [],
    "source": [
     "import datetime\n",
-    "all_cabs = set(df[\"classroom\"].unique())-{None}\n",
-    "cabs = {cab for cab in all_cabs if not cab.isdigit() and cab[0] != \"G\"}\n",
-    "def time(hours, minutes):\n",
-    "    return hours*60+minutes\n",
-    "def to_time(entry):\n",
-    "    return entry[\"start\"]\n",
-    "def then(df, date, time):\n",
-    "    return df[(df[\"date\"] == date) & (df[\"start\"]<=time) & (df[\"end\"]>=time)]\n",
-    "def now(df):\n",
+    "фдд_сфиы = all_cabs = set(df[\"classroom\"].unique())-{None}\n",
+    "сфиы = cabs = {cab for cab in all_cabs if not(cab.isdigit()|(cab[0]==\"G\"))}\n",
+    "еуфсрукы = teachers = list(df[\"teacher\"].unique())\n",
+    "def from_time(hours, minutes=None):\n",
+    "    if minutes is None:\n",
+    "        hours, minutes = hours.split(\":\")\n",
+    "    return int(hours)*60+int(minutes)\n",
+    "def to_time(time):\n",
+    "    return f\"{time//60}:\"+str(time%60).ljust(2, '0')\n",
+    "def now(df=df):\n",
     "    today = datetime.datetime.now()\n",
-    "    return then(df, f\"{today.day}/{today.month}\", time(today.hour, today.minute))\n",
+    "    return then(df, from_time(today.hour, today.minute))\n",
+    "def time_overlap(df, time=None):\n",
+    "    if isinstance(time, str):\n",
+    "        time = from_time(time)\n",
+    "    if isinstance(time, list):\n",
+    "        time = from_time(*time)\n",
+    "    if time is None:\n",
+    "        return now(df)\n",
+    "    return df[(df[\"start\"]<=time) & (df[\"end\"]>=time)]\n",
+    "def then(df, time, date=None):\n",
+    "    today = datetime.datetime.now()\n",
+    "    if date is None:\n",
+    "        date = str(today.month).rjust(2, \"0\")+\"/\"+str(today.day).rjust(2, \"0\")\n",
+    "    return time_overlap(df[(df[\"date\"] == date)], time)\n",
+    "def overlap(df, fields):\n",
+    "    df = df.copy()\n",
+    "    try:\n",
+    "        df = time_overlap(df, fields[\"time\"])\n",
+    "        del fields[\"time\"]\n",
+    "    except KeyError:\n",
+    "        pass\n",
+    "    for key in fields:\n",
+    "        df = df[df[key].apply(lambda x: fields[key] in x if x else False)]\n",
+    "    return df\n",
     "def where_will(df, teacher, date):\n",
-    "    return df[df[\"teacher\"] == teacher][df[\"date\"] == date]\n",
+    "    return overlap(df, {\"teacher\": teacher})[df[\"date\"] == date]\n",
     "def where(df, teacher):\n",
     "    today = datetime.datetime.now()\n",
-    "    return where_will(df, teacher, f\"{today.day}/{today.month}\")"
+    "    return where_will(df, teacher, f\"{today.day}/{today.month}\")\n",
+    "def show(df=df):\n",
+    "    df = df.copy()\n",
+    "\n",
+    "    new_df = pd.DataFrame(columns = df.keys())\n",
+    "    for entry in df.values:\n",
+    "        overlap = list(df[(df[\"date\"]==entry[0]) & (df[\"start\"]==entry[1]) & (df[\"classroom\"]==entry[6])][\"class\"].values)\n",
+    "        repeat = new_df[(new_df[\"date\"]==entry[0]) & (new_df[\"start\"]==entry[1]) & (new_df[\"classroom\"]==entry[6])].index\n",
+    "        if len(repeat) == 0:\n",
+    "            entry[4] = overlap\n",
+    "            new_df.loc[len(new_df.index)] = entry\n",
+    "    df = sorted_df(new_df)\n",
+    "    df[\"start\"] = df[\"start\"].apply(to_time)\n",
+    "    df[\"end\"] = df[\"end\"].apply(to_time)\n",
+    "    return df\n",
+    "def will_free(df, time, date=None):\n",
+    "    return cabs-set(then(df, time, date)[\"classroom\"])\n",
+    "def free(df=df):\n",
+    "    return cabs-set(now(df)[\"classroom\"])\n",
+    "def sorted_df(df=df):\n",
+    "    df = df.copy()\n",
+    "    return df.sort_values([\"date\", \"start\", \"end\"])\n",
+    "def today(df=df):\n",
+    "    now = datetime.datetime.now()\n",
+    "    return df[df[\"date\"] == (str(now.month).rjust(2, \"0\")+\"/\"+str(now.day).rjust(2, \"0\"))]\n",
+    "a = list(globals().items())\n",
+    "translate = dict(zip(\"qwertyuiopasdfghjklzxcvbnm\", \"йцукенгшщзфывапролдячсмить\"))\n",
+    "for key, value in a:\n",
+    "    if type(value) == type(lambda:0):\n",
+    "        exec(\"\".join(map(lambda c:translate[c] if c in translate else c, key))+f\" = {key}\")"
    ]
   },
   {
